fix alignment

--- a/packages/augur-simplified/src/modules/common/inputs.styles.less
+++ b/packages/augur-simplified/src/modules/common/inputs.styles.less
@@ -326,8 +326,9 @@
     display: flex;
     flex: 1;
     justify-content: space-between;
+    align-items: center;
   }
-  
+
   &.YesNo {
     color: var(--simple-secondary-text);
     display: flex;
